@@ -1,3 +1,5 @@
-EBUILD clementine-9999.ebuild 3310 RMD160 9a7e00304d40eb650c8c6ec8bbe24af52e9258f6 SHA1 985b8bca00c10a69ca568d2d0277c310d32867e7 SHA256 d92d27adf619139d9529a004ddb9546c7ee8f41d32eb20b6801fd5673cbd92fb
-MISC ChangeLog 1877 RMD160 7c668f7998b390c85b323f6d7a256bfaf6f3fa2a SHA1 639a65a79b57188bff25ff36aa4b486598adcf09 SHA256 1905db8b0394a82e8217c7a7c0dac3893ba63857f2b0d12f1c5650d142dab330
-MISC metadata.xml 708 RMD160 d886553457f2d6e58ff883339e8cbe1ea8010eb8 SHA1 51d6cb6f4c6953558fb3958154d769630253377f SHA256 ec0de78364f73222787e4e0f907c6b81353472dc491c0c0599a28fa41a01f4ae
+DIST clementine-0.6rc1-1.tar.gz 5586769 RMD160 37c2be41768a4b80bdefa3dcfdd853278af33c47 SHA1 c2f61da085c17ecac6fb3bd247fb8df5404948a2 SHA256 879191c72fb73f06ac74b01cb0efa1e8896f227b13778c4eb9f2357bb93683e1
+EBUILD clementine-0.6_rc1.ebuild 2813 RMD160 092d72d525108a730202783d18a17d5cefdab277 SHA1 7a211dcece9bbd96583befa0ee649487bee4e840 SHA256 911a44122a1fb03c75be5505c105273c33a14cd69217a171c2f602493305adc8
+EBUILD clementine-9999.ebuild 3461 RMD160 d39f072c9326999d3a1ea8e5404e2c02baa3bcf7 SHA1 42c8d4522bc26cc7f695cb38666f7ac8d5ff0ce3 SHA256 064e1f866104e02bc158abb4b682c42d3116bc6b62fc011a349663624989e506
+MISC ChangeLog 2059 RMD160 66b1a5b8ad4f27421b2df68deec3eaec65649b49 SHA1 d919c3ccd1b954743b51f1edcdeaf34339f87a87 SHA256 e6bdb6f0b9f9e8a7ad31f12c6a3d437fa669cf758cdb24aad2012bdd107e3fc4
+MISC metadata.xml 776 RMD160 c14890630a6350d5430024ee98ff07516efe47ba SHA1 75d79fb005fe248e67577a1f3172d3824375710e SHA256 798ad79a30f13fbc6d57f2906ada34fd94a39d7da5fd61f91937a3abfc8db031
